[package]
name          = "rgb_derivation"
description   = "Routines for calculation XYZ-RGB conversion matrices from white point and primaries"
version       = "0.1.1"
readme        = "README.md"
keywords      = ["rgb", "xyz", "color", "srgb"]
authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
license       = "LGPL-3.0-or-later"
repository    = "https://github.com/mina86/rgb_derivation"
documentation = "https://docs.rs/rgb_derivation"
edition       = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
num = "0.4"
